Fixed side picture overflow not being hidden

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ body, div {
 
 .side-picture{
   box-sizing: border-box;
+  overflow: hidden;
   width: 20vw;
   height: 100vh;
 }
